Generate changelog for multiple minor versions